[UPD]Upd division for dev and prod (no probe)  -v0.5.2

--- a/Dockerfile.dev
+++ b/Dockerfile.dev
@@ -1,22 +1,20 @@
 FROM python:3.11-slim
 
+ENV PYTHONDONTWRITEBYTECODE=1
+ENV PYTHONUNBUFFERED=1
+
 WORKDIR /app
 
 # Utilizamos slic3r classic, version estable:
-RUN apt-get update && apt-get install -y --no-install-recommends slic3r curl netcat-openbsd && rm -rf /var/lib/apt/lists/*
+RUN apt-get update && apt-get install -y --no-install-recommends build-essential slic3r curl netcat-openbsd \
+    && rm -rf /var/lib/apt/lists/*
 
 # Establecemos el PATH para que este disponible a la llamada:
 ENV SLIC3R_PATH=/usr/bin/slic3r
 
-# PRESETS:
-# skinnydip_fast.ini
-# RUN mkdir -p slicer_profiles && \
-#     curl -sSL \
-#       https://raw.githubusercontent.com/supermerill/SuperSlicer/version_2.3.0/profiles/FDMS/skinnydip_fast.ini \
-#       -o slicer_profiles/skinnydip_fast.ini
-
 # Instalamos los requerimientos de entorno:
 COPY requirements.txt .
+RUN pip install --upgrade pip
 RUN pip install --no-cache-dir -r requirements.txt
 
 COPY . .
@@ -28,3 +26,6 @@ RUN chmod +x /usr/local/bin/wait-for.sh /usr/local/bin/entrypoint.sh
 # Entramos por script personalizado:
 ENTRYPOINT ["/usr/local/bin/entrypoint.sh"]
 
+EXPOSE 8000
+
+CMD ["gunicorn", "appBackClient.wsgi:application", "--bind", "0.0.0.0:8000", "--workers", "2"]
