--- a/requirements.txt
+++ b/requirements.txt
@@ -4,4 +4,6 @@ django-cors-headers==4.7.0
 djangorestframework==3.16.0
 psycopg2-binary==2.9.10
 sqlparse==0.5.3
+django-environ>=0.11.2
+watchfiles
 gunicorn
