--- a/.gitignore
+++ b/.gitignore
@@ -21,9 +21,9 @@ logs/
 
 # Configuraciones locales (si usas)
 .env
-.env.*
+.env.staging
 .env.local
-.env.development.local
+.env.development
 .env.test.local
 .env.production
 .env.production.local
